--- a/themes/hugo-material-docs/layouts/_default/list.html
+++ b/themes/hugo-material-docs/layouts/_default/list.html
@@ -1,9 +1,8 @@
-{{- $page := index (where .Data.Pages "RelPermalink" "==" .RelPermalink) 0 -}}
-{{- $page | default . | partial "head" -}}
-{{- if and $page (eq "remark" $page.Type) -}}
-{{- partial "rawcontent" $page -}}
-{{- else if and $page (eq "swagger" $page.Type) -}}
-{{- partial "body_swagger" $page -}}
+{{- partial "head" . -}}
+{{- if (eq "remark" .Type) -}}
+{{- partial "rawcontent" . -}}
+{{- else if (eq "swagger" .Type) -}}
+{{- partial "body_swagger" . -}}
 {{- else -}}
 <div class="backdrop">
 	<div class="backdrop-paper"></div>
@@ -14,7 +13,7 @@
 <label class="toggle-button overlay" for="toggle-drawer"></label>
 
 <header class="header">
-	{{- $page | default . | partial "header" -}}
+	{{- partial "header" . -}}
 </header>
 
 <main class="main">
@@ -24,17 +23,13 @@
 
 	<article class="article">
 		<div class="wrapper">
-{{- if $page -}}
-<h1>{{- $page.Title | title -}}</h1>
-{{- partial "tag" $page -}}
-{{- $page.Content -}}
+<h1>{{- .Title | title -}}</h1>
+{{- partial "tag" . -}}
+{{- .Content -}}
 <footer class="footer">
-  {{- partial "footer" $page -}}
+  {{- partial "footer" . -}}
 </footer>
-{{- else -}}
-<h1>Pages in {{ .Title | title }}</h1>
 {{- partial "items" .Data.Pages -}}
-{{- end -}}
 {{- partial "copyright" . -}}
 		</div>
 	</article>
