--- a/themes/hugo-material-docs/layouts/partials/head.html
+++ b/themes/hugo-material-docs/layouts/partials/head.html
@@ -16,7 +16,7 @@
 {{- else -}}
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=10" />
-    {{ .Hugo.Generator }}
+    {{ hugo.Generator }}
     {{- with .Site.Params.description -}}
     <meta name="description" content="{{ . }}">
     {{- end -}}
@@ -40,10 +40,6 @@
     <link rel="stylesheet" href="{{ "stylesheets/palettes.css" | relURL }}">
     <link rel="stylesheet" href="{{ "stylesheets/pygments.css" | relURL }}">
     <script src="{{ "javascripts/modernizr.js" | relURL }}"></script>
-    {{- with .RSSLink -}}
-    <link href="{{ . }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title | title }}" />
-    <link href="{{ . }}" rel="feed" type="application/rss+xml" title="{{ $.Site.Title | title }}" />
-    {{- end -}}
   </head>
   <body class="{{ with .Site.Params.palette.primary }}palette-primary-{{ . }}{{end }} {{ with .Site.Params.palette.accent }}palette-accent-{{ .  }}{{ end }}">
   {{- end -}}
