--- a/themes/hugo-material-docs/layouts/shortcodes/code.html
+++ b/themes/hugo-material-docs/layouts/shortcodes/code.html
@@ -1,6 +1,4 @@
 {{- $src := (index .Params 0) -}}
 {{- $lang := (index .Params 1 |  default (replaceRE ".*[.]" "" $src)) -}}
-{{- $code := (printf "content/%s%s" .Page.Dir $src | readFile) -}}
+{{- $code := (printf "content/%s%s" .Page.File.Dir $src | readFile) -}}
 {{- highlight $code $lang "" -}}
-
-
